# shop_prices_comparaison

./: .env.EXAMPLE  .gitignore  Pipfile  README.md  manage.py  netlify.toml  pyproject.toml  render.toml  requirements.txt
main/: models.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: footer.html  header.html  select_supermarket.html  shop_summary.html
main/templatetags/: dict_utils.py
open_shop_compare/: asgi.py  settings.py  urls.py  wsgi.py
