[tool.poetry]
name = "open-shop-compare"
version = "0.1.0"
description = "Tool to compare the prices of products from shops"
authors = ["Quentin Loridant <q.loridant@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
requests = "^2.32.3"
xmltodict = "^0.14.2"
django-bootstrap5 = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
